# sscep

./: .gitignore  CMakeLists.txt
src/: cmd.c  cmd.h  configuration.c  configuration.h  pkcs7.c  sceputils.c  sscep.c  sscep.h
src/engines/: sscep_capi.h
